JSAI/error/src/test/resources/base/precision_if-true.js
var x;
if (true) {
    x = "True";
} else {
    x = "False";
}
print(x)
x
/*** EXPECT: "True" ***/
